--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ERqJs2CYivOyuyn5HGnlgNJRYBQ4Har7iJ+laNkjcS4=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://chotikotha.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,8 +23,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=chotfsbe_ckotha
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=chotfsbe_super
+DB_PASSWORD=k.i?M{!X*Sn3
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
