--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=chotfsbe_ckotha
-DB_USERNAME=chotfsbe_super
-DB_PASSWORD=k.i?M{!X*Sn3
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
